# soundsource-shortcutd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  foo.dill.soundsource-shortcutd.plist.in  main.cpp
